--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -39,7 +39,10 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_streaming_text_markdown: ^1.1.0
   speech_to_text: ^6.6.1
-  dash_chat_2: ^0.0.21
+  dash_chat_2:
+    git:
+      url: https://github.com/Dartly/Dash-Chat-2.git
+      ref: 2665dcc19a4401d6159ac477902e9778b0ae8b14
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
